# mayaMatchMoveSolver

./: .buildinfo  .clang-format  .clang-tidy  .flake8  .gitattributes  .gitignore  .gitmodules  .travis.yml  API.md  AUTHORS.txt  BUILD.md  BUILD_LINUX.md  BUILD_MACOS.md  BUILD_WINDOWS.md  CMakeLists.txt  CPPLINT.cfg  Cargo.toml  DESIGN.md  DEVELOPER.md  Dockerfile_maya2019  Dockerfile_maya2020  Dockerfile_maya2022  INSTALL.md  INSTALL_LINUX.md  INSTALL_WINDOWS.md  LICENSE  LICENSE.FindMaya.cmake.txt  LICENSE.Qt.py.txt  LICENSE.eigen.README.txt  LICENSE.openMVG.histogram.txt  LICENSE.openMVG.progress.txt  LICENSE.project_nayuki.txt  Makefile  README.md  TODO.md  TOOLS.md  USAGE.md  build_windows64.bat  build_with_atlas.sh  build_with_cminpack.bat  (+170 more)
blender/: CMakeLists.txt
blender/mmSolver_blender_addon/: __init__.py  mmsolver_2d_tracks_export.py  mmsolver_panel.py  uvtrack_format_blender.py
docs/: CMakeLists.txt  ISSUE_TEMPLATE.md  Makefile  build_docs_with_venv.bash  build_docs_with_venv.bat  make.bat
docs/source/: commands.rst  commands_display.rst  commands_image.rst  commands_other.rst  commands_solve.rst  conf.py  conf.py.in  configuration.rst  download.rst  index.rst  introduction.rst  licenses.rst  mmSolver.api.rst  mmSolver.tools.aboutwindow.rst  mmSolver.tools.attachbundletocurve.rst  mmSolver.tools.averagemarker.rst  mmSolver.tools.cameraaim.rst  mmSolver.tools.cameracontextmenu.rst  mmSolver.tools.cameraobjectscaleadjust.rst  mmSolver.tools.centertwodee.rst  mmSolver.tools.channelsen.rst  mmSolver.tools.convertmarker.rst  mmSolver.tools.copypastecamera.rst  mmSolver.tools.copypastemarker.rst  mmSolver.tools.createbundle.rst  mmSolver.tools.createcamera.rst  mmSolver.tools.createcontroller.rst  mmSolver.tools.createcontroller2.rst  mmSolver.tools.createimageplane.rst  mmSolver.tools.createline.rst  mmSolver.tools.createmarker.rst  mmSolver.tools.createrivet.rst  mmSolver.tools.createskydome.rst  mmSolver.tools.deformmarker.rst  mmSolver.tools.duplicatemarker.rst  mmSolver.tools.imagecache.rst  mmSolver.tools.imagecacheprefs.rst  mmSolver.tools.linkmarkerbundle.rst  mmSolver.tools.loadlens.rst  mmSolver.tools.loadmarker.rst  (+85 more)
icons/: .gitignore  CMakeLists.txt  resources.qrc
icons/ui/: mmSolver_attr_type.xcf
lib/: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
lib/mmsolverlibs/: Cargo.toml
lib/rust/: Cargo.toml
mmscenegraph/: CMakeLists.txt  Config.cmake.in
mmscenegraph/cppbind/: CMakeLists.txt  Cargo.toml
mmscenegraph/rust/: .gitignore
modules/: CMakeLists.txt  mayaMatchMoveSolver.mod  mayaMatchMoveSolver_linux.mod  mayaMatchMoveSolver_windows.mod
python/: CMakeLists.txt
python/mmSolver/: README.md  __init__.py  api.py  constant.py.in  logger.py  startup.py
share/: CMakeLists.txt  requirements-dev-maya2020.txt  requirements-dev-maya2024.txt  requirements-dev.txt  requirements-doc-maya2018.txt  requirements-doc-maya2024.txt  requirements-doc.txt
share/3dequalizer/: README.md
share/blender/: CMakeLists.txt
share/config/: functions.json  menu.json  shelf.json  shelf_minimal.json
share/docker/: Dockerfile_maya2019  Dockerfile_maya2020  Dockerfile_maya2022  Dockerfile_maya2023  Dockerfile_maya2024  Dockerfile_maya2025  Dockerfile_maya2026  distrobox_maya2024_gui.bash
share/icons/: CMakeLists.txt  README.md  build_icons.bash  build_icons.bat  resources.qrc
share/images/: CMakeLists.txt  default_mmSolver_1920x1080_hd.iff
share/maya_python_plugins/: CMakeLists.txt  MMMarkerBundleShape.py
share/modules/: CMakeLists.txt  mayaMatchMoveSolver_linux.mod  mayaMatchMoveSolver_mac.mod  mayaMatchMoveSolver_win64.mod
share/python_requirements/: README.md  requirements-github-build-and-deploy-docs.txt  requirements-github-lint-code.txt  requirements-maya2018.txt  requirements-maya2019.txt  requirements-maya2022.txt  requirements-maya2024.txt
share/shader/: CMakeLists.txt  mmCopy.ogsfx  mmDepth.ogsfx  mmEdge.ogsfx  mmImagePlane.ogsfx  mmLayerMerge.ogsfx  mmSilhouette.ogsfx  ocgImagePlaneSolid.ogsfx  ocgImagePlaneTextured.ogsfx
share/syntheyes/: CMakeLists.txt
src/: Attr.cpp  Attr.h  Bundle.cpp  Bundle.h  CMakeLists.txt  Camera.cpp  Camera.h  MMAffectsCmd.cpp  MMAffectsCmd.h  MMCameraCalibrateNode.cpp  MMCameraCalibrateNode.h  MMCameraRelativePoseCmd.cpp  MMCameraRelativePoseCmd.h  MMCameraSolveCmd.cpp  MMCameraSolveCmd.h  MMLensBasicNode.cpp  MMLensBasicNode.h  MMLensData.cpp  MMLensData.h  MMLensDeformerNode.cpp  MMLensDeformerNode.h  MMLensEvaluateNode.cpp  MMLensEvaluateNode.h  MMLensModel3deClassicNode.cpp  MMLensModel3deClassicNode.h  MMLensModelBasicNode.cpp  MMLensModelBasicNode.h  MMLensModelToggleNode.cpp  MMLensModelToggleNode.h  MMLineIntersectNode.cpp  MMLineIntersectNode.h  MMMarkerGroupNode.cpp  MMMarkerGroupTransformNode.cpp  MMMarkerGroupTransformNode.h  MMMarkerScaleNode.cpp  MMMarkerScaleNode.h  MMMarkerTransformMatrix.cpp  MMMarkerTransformMatrix.h  MMMarkerTransformNode.cpp  MMMarkerTransformNode.h  (+34 more)
src/adjust/: adjust_base.cpp  adjust_base.h  adjust_cminpack_base.cpp  adjust_cminpack_base.h  adjust_cminpack_lmder.cpp  adjust_cminpack_lmder.h  adjust_cminpack_lmdif.cpp  adjust_cminpack_lmdif.h  adjust_data.h  adjust_defines.h  adjust_levmar_bc_dif.cpp  adjust_levmar_bc_dif.h  adjust_relationships.cpp  adjust_relationships.h  adjust_solveFunc.cpp  adjust_solveFunc.h
src/calibrate/: calibrate_common.cpp  calibrate_common.h  vanishing_point.cpp  vanishing_point.h
src/core/: bundleAdjust_base.cpp  bundleAdjust_base.h  bundleAdjust_cminpack_base.cpp  bundleAdjust_cminpack_base.h  bundleAdjust_cminpack_lmder.cpp  bundleAdjust_cminpack_lmder.h  bundleAdjust_cminpack_lmdif.cpp  bundleAdjust_cminpack_lmdif.h  bundleAdjust_data.h  bundleAdjust_defines.h  bundleAdjust_levmar_bc_dif.cpp  bundleAdjust_levmar_bc_dif.h  bundleAdjust_relationships.cpp  bundleAdjust_relationships.h  bundleAdjust_solveFunc.cpp  mmcoord.h  (+27 more)
syntheyes/: 3deqexp.szl  CMakeLists.txt  mmSolverTrackExport.szl
tests/: .gitignore  CMakeLists.txt  README.md  debugParse.py  runTests.py  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py
(+2656 files in other folders)
